--- a/app/src/main/res/drawable/settings_items_background.xml
+++ b/app/src/main/res/drawable/settings_items_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="#007aff"/>
-    <padding android:bottom="@dimen/_6sdp"
-        android:left="@dimen/_6sdp"
-        android:right="@dimen/_6sdp"
-        android:top="@dimen/_6sdp"/>
+    <padding android:bottom="6dp"
+        android:left="6dp"
+        android:right="6dp"
+        android:top="6dp"/>
 </shape>
