--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -124,7 +124,7 @@
 
 
     <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
@@ -146,7 +146,7 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/ic_facebook_login"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@id/btn_register" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -164,7 +164,7 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/ic_google_login"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@id/btn_register" />
 
     <TextView
         android:layout_width="wrap_content"
